2007-02-02  Klaus Weiss  <klaus.weiss@nanet.at>

	* main.c (main): added getopt_long() support

2006-11-18    Claudio Fontana <claudio@gnu.org>
	
	* ReportUsage.sh: removed.
	* configure.in: do not get input from stdin, do not mail reports
	  to the original author. Fix to satisfy GNU standards.
	  Replace AM_CONFIG_HEADER with AC_CONFIG_HEADERS.
	* src/Makefile.am: configuration file path fixed.
	* src/conf.h: remove THALES_CONF definition.
	* data/Makefile.am: support DESTDIR, use correct variables for data.
	* ChangeLog: recreated in GNU format, moved old to NEWS.
	* Makefile.am: adjust for the changes, remove foreign option.
	* autogen.sh: new file
