@@ -1,3 +1,2 @@
 bin_PROGRAMS = thales
 thales_SOURCES = main.c log.c log.h thales.h conf.c conf.h compat.c compat.h misc.c misc.h defs.h send.c send.h sockutil.c sockutil.h messages.c messages.h process.c process.h memory.c memory.h db.c db.h actions.c actions.h hashlist.c hashlist.h
-thales_CPPFLAGS = "-DTHALES_CONF=\"$(sysconfdir)/thales.conf\""
